deployment/digitalocean/test-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-env
  namespace: gomeet
spec:
  containers:
    - name: test
      image: alpine:latest
      command: ["sleep", "3600"]
  restartPolicy: Never
