deployment/digitalocean/ingress-cloudflare-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gomeet-meet-frontend-ingress-cloudflare
  namespace: gomeet
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.priority: "900"
spec:
  tls:
    - hosts:
        - meet.filosofine.com
      secretName: cloudflare-origin-cert
  rules:
    - host: meet.filosofine.com
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 5173
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gomeet-api-meet-backend-ingress-cloudflare
  namespace: gomeet
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.priority: "800"
spec:
  tls:
    - hosts:
        - api-meet.filosofine.com
      secretName: cloudflare-origin-cert
  rules:
    - host: api-meet.filosofine.com
      http:
        paths:
          - backend:
              service:
                name: auth-service
                port:
                  number: 8080
            path: /health
            pathType: Exact
          - backend:
              service:
                name: auth-service
                port:
                  number: 8080
            path: /api/v1
            pathType: Prefix
